<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent"
    android:focusable="false"
    android:orientation="vertical"
    android:paddingLeft="10dp"
    android:paddingRight="10dp" >


    <Button
        android:id="@+id/change_date"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/pop_window_bg_top"
        android:text="@string/change_date_title" 
        android:textColor="#FFFFFF"
        android:layout_marginTop="1dp"/>


    <Button
        android:id="@+id/delete_single"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/pop_window_bg_center"
        android:text="@string/menu_delete_note" 
        android:textColor="#FFFFFF"
        android:layout_marginTop="1dp"/>
    
    <Button
        android:id="@+id/share_with_others"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:background="@drawable/pop_window_bg_bottom"
        android:text="@string/share_title"
        android:textColor="#FFFFFF"
        android:layout_marginTop="1dp"/>

</LinearLayout>